# digital_power_management_system

./: .gitignore  ARCHITECTURE_FIX.md  ARCHITECTURE_OVERVIEW.md  CMakeLists.txt  HAL_IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  README.md  SYSTEM_LAYER.md  main.c
application/: APPLICATION_LAYER.md  CMakeLists.txt  COMPLETION_REPORT.md
application/examples/: app_demo.c
application/include/: application.h
application/src/: application.c
bsp/: CMakeLists.txt  README.md  test_bsp.c
bsp/include/: bsp.h  bsp_gpio.h  bsp_uart.h
bsp/src/: bsp.c
component/: CMakeLists.txt
component/examples/: component_demo.c
component/include/: component.h  json_codec.h  modbus_protocol.h
component/middleware/: json_codec.c  modbus_protocol.c
component/src/: component.c
docs/: ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  BSP_IMPLEMENTATION_SUMMARY.md  BSP_QUICK_REFERENCE.md  COMPONENT_LAYER.md  COVERAGE_TESTING.md  DOCUMENT_ORGANIZATION.md  DRIVER_LAYER.md  HAL_README.md  IMPLEMENTATION_SUMMARY.md  LOG_MIGRATION_GUIDE.md  PROJECT_AUDIT_REPORT.md  QUICK_REFERENCE.md  README.md
docs/scripts/: coverage_test.bat  coverage_test.sh
driver/: CMakeLists.txt
driver/devices/: gpio_driver.c  uart_driver.c
driver/examples/: driver_demo.c
driver/include/: driver.h  gpio_driver.h  uart_driver.h
driver/src/: driver.c
hal/: CMakeLists.txt
hal/examples/: hal_bsp_demo.c  hal_demo.c
hal/include/: hal.h  hal_adc.h  hal_gpio.h  hal_i2c.h  hal_pwm.h  hal_spi.h  hal_timer.h  hal_uart.h
hal/src/: hal.c  hal_gpio.c  hal_uart.c
system/: CMakeLists.txt
system/examples/: system_demo.c
system/include/: freertos_wrapper.h  system.h  system_log.h  threadx_wrapper.h
system/os/: freertos_wrapper.c  threadx_wrapper.c
system/src/: system.c  system_log.c
